--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@
 body{
     background-image: linear-gradient(30deg,var(--c1),var(--c2));
     width: 100%;
-    height: 600px; /*adicionado apenas para o ambiente especifico que estou visualizando*/
+    min-height: 600px;/*adicionado apenas para o ambiente especifico que estou visualizando*/
+    height: 100vh; /*adicionado apenas para o ambiente especifico que estou visualizando*/
     display: flex;
     justify-content: center;
     align-items: center;
