--- a/style.css
+++ b/style.css
@@ -20,10 +20,11 @@ body{
     align-items: center;
 }
 main{
-    background-color: var(--c5);
+    background-color: var(--c2);
     display: flex;
     padding: 20px;
     border-radius: 20px;
+    flex-direction: column;
 }
 img{
     width: 288px;
@@ -31,3 +32,45 @@ img{
     margin: auto;
     border-radius: 10px;
 }
+h1, p, span{
+    font-family: "Sora", sans-serif;
+}
+h1{
+    color: var(--c4);
+    font-size: 16px;
+    text-align: center;
+    margin-top: 14px;
+    font-weight: 500;
+}
+p, span{
+    color: var(--c3);
+}
+p{
+    
+    font-size: 12px;
+    text-align: center;
+    margin-top: 8px;
+    font-weight: 400;
+}
+#tempos{
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+span{
+    font-size: 10px;
+}
+#barra_progresso_total{
+    background-color: var(--c4);
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+}
+#barra_progresso_atual{
+    margin-top: -4px;
+    background-color:var(--c1);
+    width: 60%;
+    height: 4px;
+    border-radius: 2px;
+}
+
