--- a/style.css
+++ b/style.css
@@ -76,8 +76,40 @@ span{
     border-radius: 2px;
 }
 #controles{
-    margin-top:20px;
+    margin-top:40px;
     display: flex;
     justify-content: center;
-    gap: 8px;
+    gap: 18px;
+}
+button{
+    background-color: transparent;
+    border: none;
+    border-radius: 50%;
+    width: 48px;
+    height: 48px;
+    line-height: 1;
+    display: flex;
+}
+
+button img{
+    filter: var(--c1);
+    border-radius: 50%;
+    width: 32px;
+
+}
+#image_play{
+    background-color: var(--c1);
+    
+}
+button:hover{
+    background-color: var(--c5);  
+    border: var(--c1) 1px solid;  
+    filter: drop-shadow(0px 0px 2px var(--c1));
+}
+#play{
+    background-color: var(--c1);
+    filter: drop-shadow(0px 0px 2px rgba(201, 59, 118, 0.25));
+}
+#play:hover{
+    filter: drop-shadow(0px 0px 2px var(--c1));
 }
